# rust-fmi-embedded-app

./: Cargo.toml  LICENSE  README.md
src/: main.rs
