[package]
name = "rust_fmi_embedded_app"
version = "0.1.0"
authors = ["Peter Kazakov <peterkazakov@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.4.0"

esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.10", optional = true }

esp-println = { version = "0.3.1", features = ["esp32c3"] }

[features]
default = ["rt"]
rt = ["riscv-rt"]
